0.21.6
======

- First iteration of the gateway selector.
- Allow to select obfs4 gateways (bridges) to bypass censorship.
- Ability to define explicitly allowed addresses for local networks.
- Update translations. New locales: greek, farsi, hungarian, dutch, polish and uyghur.