@@ -4,4 +4,5 @@
 - First iteration of the gateway selector.
 - Allow to select obfs4 gateways (bridges) to bypass censorship.
 - Ability to define explicitly allowed addresses for local networks.
-- Update translations. New locales: greek, farsi, hungarian, dutch, polish and uyghur.
+- Make the donate dialog less intrusive (#470)
+- Updated translations. New locales: greek, farsi, hungarian, dutch, polish and uyghur.
